<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0aeae"
    android:orientation="vertical" >

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dip"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/findroom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dip"
        android:gravity="center"
        android:text="@string/findroom"
        android:textColor="#dddddd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="#ffffff"
        android:padding="10dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchRoomEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/searchroomhint"
            android:textColor="#606060"
            android:textSize="18sp" 
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/btnSearchRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchroom"
            android:textColor="#606060"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewSearchRooms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/btnToCreateRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@layout/button"
            android:text="@string/createRoomForum"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>